--- a/SPS Website/updates.html
+++ b/SPS Website/updates.html
@@ -24,7 +24,12 @@
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
-
+        <style>
+        img {
+            max-width: 100%;
+            height: auto;
+            }
+        </style>
         <title>Updates</title>
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 
@@ -120,9 +125,9 @@
                     </h3>
                     <br>
                     <p>Time to enter the labyrinth!</p>
-                    <img src="img/ard13.jpg" alt="" style="width: 600px; height:460px;">
+                    <img src="img/ard9.jpg" alt="" style="width: 600px; height:auto;">
                     <br><br>
-                    <p style="margin-left:5em; text-align: left">This week at Society of Physics Students, students got to program a robot to navigate some treacherous mazes! Students are encourgaed to compete with friends to see whose code brings their robot to the end first! Challenge modes available for those eager to test their coding skills to the limit! <br>And Happy Thanksgiving everyone (fyi turkeys taste yummier when cooked by eletrocution) :> </p>
+                    <p style=" text-align: left">This week at Society of Physics Students, students got to program a robot to navigate some treacherous mazes! Students are encouraged to compete with friends to see whose code brings their robot to the end first! Challenge modes available for those eager to test their coding skills to the limit! <br>And Happy Thanksgiving everyone (fyi turkeys taste yummier when cooked by electrocution) :> </p>
                     <hr>
                 </div>
             </div>
@@ -139,9 +144,9 @@
                     </h3>
                     <br>
                     <p>Ever wanted to learn how to program a robot to navigate a maze?</p>
-                    <img src="img/ard7.jpg" alt="" style="width: 600px; height:460px;">
+                    <img src="img/ard7.jpg" alt="" style="width: 600px; height:auto;">
                     <br><br>
-                    <p style="margin-left:5em;" align="left" >Now you can with Arduino, an open-source electronics platform that allows you to code commands to control motors, power LEDs, and more! This week, we went over the basics of Arduino hardware and how servo motors work, and we also showcased our Whack-a-Mole circuit game from last spring!<br>This is part 1 of our 2-part Arduino Workshop, to be continued in Week 9!</p>
+                    <p style="text-align:left" >Now you can with Arduino, an open-source electronics platform that allows you to code commands to control motors, power LEDs, and more! This week, we went over the basics of Arduino hardware and how servo motors work, and we also showcased our Whack-a-Mole circuit game from last spring!<br>This is part 1 of our 2-part Arduino Workshop, to be continued in Week 9!</p>
                     <hr>
                 </div>
             </div>
@@ -151,13 +156,13 @@
                 <!--Post #?-->
                 <div class="box">
                 <div class="col-lg-12 text-center">  <!--text-center-->                
-                    <h3 style ="font-family: arial; font-weight: 500px;">SPS Fall Meeing Week 3: Plasma Lab tour
+                    <h3 style ="font-family: arial; font-weight: 500px;">SPS Fall Meeting Week 5: Plasma Lab tour
                         <br>
                         <small>Nov 9, 2016</small>
                     </h3>
                     <p>Featuring the Large Plasma Device (LAPD)!</p>
-                    <img src="img/plasma2.jpg" alt="" style="width: 600px; height:460px;">
-                    <p style="margin-left:5em; text-align:left">This week SPS went to the Basic Plasma Science Facility in Westwood. Thanks Dr.Carter for the presenation and the lab tour!</p>
+                    <img src="img/plasma2.jpg" alt="" style="width: 600px; height:auto;">
+                    <p style="text-align:left">This week SPS went to the Basic Plasma Science Facility in Westwood. Thanks Dr.Carter for the presentation and the lab tour!</p>
                     <!--<a href="#" class="btn btn-default btn-lg">Read More</a>-->
                     <hr>
                 </div>
@@ -172,10 +177,10 @@
                         <br>
                         <small>Oct 20, 2016</small>
                     </h3>
-                    <p>Enorumous Activities Fair and Undergrad Research Center (URC) Fair.</p>
-                    <img src="img/urc1.jpg" alt="URC" style="width: 400px; height:410px;"><br><br>
-                    <img src="img/eaf1.jpg" alt="eaf" style="width: 440px; height:320px;">
-                    <p style="margin-left:5em;" align="left"></p>
+                    <p>SPS at the Enormous Activities Fair and Undergrad Research Center (URC) Fair.</p>
+                    <img src="img/urc1.jpg" alt="URC" style="width: 400px; height:auto;"><br><br>
+                    <img src="img/eaf1.jpg" alt="eaf" style="width: 440px; height:autopx;">
+                    <p style="text-align:left"></p><!--"margin-left:5em;"-->
                     <!--<a href="#" class="btn btn-default btn-lg">Read More</a>-->
                     <hr>
                 </div>
