--- a/SPS Website/about.html
+++ b/SPS Website/about.html
@@ -19,11 +19,11 @@
 
 <body>
 
-<!--HEADER SAME-->
-    <!--Main banner-->
+<!--HEADER-->
+      <!--Main banner-->
+
     <div class="brand" style ="font-family: sans-serif; font-weight: 300px;"><img src="img/ucla2.jpg" style="width: 17%; height: 17%; opacity:0.92"> Society of Physics Students</div>
     <div class="address-bar">Undergraduate physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#ffcc33"> Facebook</font></a>| <a href="https://twitter.com/uclasps/"><font color = "#ffcc33">Twitter</font></a></div>
-
 
     <!-- Navigation -->
      <nav class="navbar navbar-default" role="navigation">
@@ -56,7 +56,7 @@
                     <li>
                         <a href="gallery.html">Gallery</a>
                     </li>
-                    
+                
                     <li>
                             <a href="officers.html">Officers</a>
                             <ul class ="dropdown">
@@ -93,7 +93,7 @@
                 <!--Title text-->
 
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/spslogo.jpg" alt=""style="width: 90%; height:90%">
+                    <img class="img-responsive img-border-left" src="img/sps_logo.jpg" alt=""style="width: 90%; height:90%">
                     <br>
                     <!--<img class="img-responsive img-border-left" src="img/ucla2.jpg" alt="" style="width: 70%; height:70%">-->
                      <!--<img class="img-responsive img-border-left" src="img/ucla2.jpg" alt="" style="width: 550px; height:230px">-->
@@ -107,7 +107,7 @@
                 </strong> Stimulate interest in the physical sciences. 
 
                     <br></br>
-                    More specifically, the <font color="00bfff">UCLA SPS </font> serves to widen the networks amongst the physics undergraduate student body and to increase the students’ interaction with the graduate and faculty members through colloquiums on the cutting-edge research occurring here at UCLA and beyond. SPS introduces younger members of the physics undergraduate student body to an active, engaging academic lifestyle through study groups and research experience. </br></br></p>
+                    More specifically, the <font color="00bfff">UCLA SPS </font> serves to widen the networks amongst the physics undergraduate student body and to increase the students’ interaction with the graduate and faculty members through colloquiums on the cutting-edge research occurring here at UCLA and beyond. SPS introduces younger members of the physics undergraduate student body to an active, engaging academic lifestyle through study groups and research experience. </br> <br>We can be conveniently reached at <a>sps.ucla@gmail.com</a>, so please feel free to contact us.</br></p>
                 </div>
 
                 <div class="clearfix"></div>
@@ -135,7 +135,7 @@
 
                 <div class="col-sm-4 text-center">
                       <img class="img-responsive" src="img/plasma.jpg" alt="" style="height:100%; width:100%">
-                    <p>visit lab facility: plasma lab, infrared lab, etc.</p>
+                    <p>tour labs.</p>
                 </div>
 
                 <div class="clearfix"></div>
@@ -168,12 +168,6 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 
-<!-- Script to Activate the Carousel -->
-<script>
-$('.carousel').carousel({
-    interval: 5000 //changes the speed
-})
-</script>
 
 
 </html>
