--- a/SPS Website/gallery.html
+++ b/SPS Website/gallery.html
@@ -1,31 +1,45 @@
-
 <!DOCTYPE html>
-<html lang ="en">
+<html lang="en">
 
 <head>
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="css/theme.css" rel="stylesheet">
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+    <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-   <!--font-awesome icons-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- Bootstrap Core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-  <title>UCLA SPS</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+        <!-- Custom CSS -->
+        <link href="css/theme.css" rel="stylesheet">
 
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-</head>
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        <style>
+        img {
+            max-width: 100%;
+            height: auto;
+            }
+        </style>
+        <title>Gallery</title>
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
+
+    </head>
 
 <body>
-    <!--Main banner-->
-    <div class="brand" style ="font-family: sans-serif; font-weight: 300px;"><img src="img/ucla2.jpg" style="width: 17%; height: 17%; opacity:0.92"> Society of Physics Students</div>
-    <div class="address-bar">Undergraduate physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#ffcc33"> Facebook</font></a>| <a href="https://twitter.com/uclasps/"><font color = "#ffcc33">Twitter</font></a></div>
 
+<!--Main banner-->
+    <div class="brand" style ="font-family: sans-serif; font-weight: 300px;"><img src="img/ucla2.jpg" style="width: 17%; height: 17%; opacity:0.92"> Society of Physics Students</div>
+    <div class="address-bar">Undergraduate physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#ffcc33"> Facebook</font></a>| <a href="https://twitter.com/uclasps/"><font color = "#ffcc33">Twitter</font></a></div> 
 
     <!-- Navigation -->
      <nav class="navbar navbar-default" role="navigation">
@@ -70,10 +84,10 @@
 
                     <li>
                         <a href="documents.html">Documents</a>
-                         <ul class ="dropdown">
+                        <ul class ="dropdown">
                                 <li><a href="arduino.html">•Arduino</a></li>
                                 <li><a href="logistics.html">•Logistics</a></li>
-                        </ul>
+                            </ul>
                     </li>
                    
                 </ul>
@@ -82,17 +96,22 @@
         </div> <!--navi container-->
      </nav>
 
+       <!--Slideshow-->
+       <div class="container">
+        <center>
+            <p style="color:white; font-size:1.5em;"><i>Mobile users</i>: If gallery is not displayed, please visit our <a href="https://get.google.com/albumarchive/102595540501524578755/album/AF1QipMtlacXlrXN4lZyWi2gLA_F96G1RVnCUMqU0VL5?source=pwa">google album.</a></p>
+          <embed type="application/x-shockwave-flash" src="https://photos.gstatic.com/media/slideshow.swf" width="900" height="490" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102595540501524578755%2Falbumid%2F6067897752377567841%3Falt%3Drss%26kind%3Dphoto%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
 
-    <!--Slideshow-->
-    <center>
-      <embed type="application/x-shockwave-flash" src="https://photos.gstatic.com/media/slideshow.swf" width="900" height="490" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102595540501524578755%2Falbumid%2F6067897752377567841%3Falt%3Drss%26kind%3Dphoto%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
-      <!-- Flicker: <a data-flickr-embed="true" data-footer="true"  href="https://www.flickr.com/photos/145162727@N08/albums/72157675715150000" title="SPS 2016-2017"><img src="https://c6.staticflickr.com/6/5507/30420824053_234b52cc4d.jpg" width="500" height="375" alt="SPS 2016-2017"></a>-->
-     <hr>
-     </center> 
+          <!-- Flicker: <a data-flickr-embed="true" data-footer="true"  href="https://www.flickr.com/photos/145162727@N08/albums/72157675715150000" title="SPS 2016-2017"><img src="https://c6.staticflickr.com/6/5507/30420824053_234b52cc4d.jpg" width="500" height="375" alt="SPS 2016-2017"></a>-->
+         <hr>
+         </center> 
+     </div>
 
 
     <!--/Slideshow-->
 
+
+     
 </body>
 
 <footer>
@@ -104,4 +123,12 @@
             </div>
         </div>
     </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+
 </html>
