Update VP of pres

--- a/SPS Website/officers.html
+++ b/SPS Website/officers.html
@@ -16,6 +16,9 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+    <style>
+
+    </style>
 
     <title>Officers</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
@@ -56,12 +59,12 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="about.html">Gallery</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
 
-                    <li>
-                            <a href="officers.html">Officers</a>
-                            <ul class ="dropdown">
+                    <li>     
+                            <a href="javascript:void(0)" data-toggle="dropdown">Officers<span class="caret"></span></a>
+                            <ul class ="dropdown-menu">
                                 <li><a href="officers.html">2016-2017</a></li>
                                 <li><a href="#">2015-2016</a></li>
                                 <li><a href="officers1415.html">2014-2015</a></li>
@@ -69,8 +72,8 @@
                         </li>
 
                     <li>
-                        <a href="documents.html">Documents</a>
-                         <ul class ="dropdown">
+                        <a href="javascript:void(0)" data-toggle="dropdown">Documents<span class="caret"></span></a>
+                        <ul class ="dropdown-menu">
                                 <li><a href="arduino.html">•Arduino</a></li>
                                 <li><a href="logistics.html">•Logistics</a></li>
                         </ul>
@@ -142,9 +145,9 @@
                 <div class="col-md-6">
                     <center>
                     <hr>
-                    <img class="img-responsive" src="img/hayley.jpg" alt="" style="height: 70%; width:50%"> 
-                    <h3 style="font-family:verdana; font-size:1.3em">Hayley Bricker <small style="font-size:0.8em">Vice President of <b>Presentations</b> </small></h3>
-                    <p align="justify" style="font-family:verdana; font-size:13px">Hayley is a minty-fresh Geology major, having been an Astrophysics major for two years. She is interested in the study of exoplanets (their atmospheric chemistry and potential geochemistry), biogeochemistry, and paleontology. She currently works in the Clumped Isotopes Laboratory with Professor Aradhna Tripati. When she isn’t organizing several clubs, studying, or doing research, she’s usually running and/or hiking, reading, or writing. Hayley drinks an average of 5 cups of coffee per day.</p>
+                    <img class="img-responsive" src="img/night.jpg" alt="" style="height: 70%; width:50%"> 
+                    <h3 style="font-family:verdana; font-size:1.3em">Bade, Raj, Chad <small style="font-size:0.8em">Vice President of <b>Presentations</b> </small></h3>
+                    <p align="justify" style="font-family:verdana; font-size:13px">The triple makes magic happen</p>
                     </center>
                 </div>
 
